--- a/app/style.css
+++ b/app/style.css
@@ -1,6 +1,6 @@
 .container {
 	max-width: 500px;
-	border: solid 1px black;
+/*	border: solid 1px black;*/
 }
 
 h1 {
@@ -15,4 +15,12 @@ h1 {
 
 th, td {
 	text-align: center;
+}
+
+#error {
+	display: none;
+}
+
+#output	{
+	display: none;
 }
